# ami_meeting_svc

./: API.md  Makefile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 5c70cce2ce57_create_users_table.py  98a245e39c12_create_meeting_table.py  a2b3c4d5e6f7_add_analysis_result.py  d1f2e3c4b5a6_create_action_items_table.py
src/ami_meeting_svc/: app.py  config.py  main.py
src/ami_meeting_svc/models/: __init__.py  action_item.py  base.py  meeting.py  user.py
src/ami_meeting_svc/routers/: action_items.py  auth.py  dashboard.py  meetings.py
src/ami_meeting_svc/schemas/: __init__.py  action_item.py  auth.py  dashboard.py  meeting.py
src/ami_meeting_svc/services/: __init__.py  ai_service.py  dashboard_service.py
src/ami_meeting_svc/utils/: security.py
tests/: conftest.py  test_action_item_model.py  test_action_items_api.py  test_ai_service.py  test_auth.py  test_dashboard.py  test_documentation.py  test_extract_actions.py  test_meeting_model.py  test_meetings.py  test_requirements_and_config.py  test_user_model.py
